--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -2,3 +2,12 @@
   margin: 1rem;
   font-family: Arial, Helvetica, sans-serif;
 }
+.cta-button {
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
