changed Main.js and App.css

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -14,7 +14,7 @@
 #HeroSection {
   height: 100vh;
   justify-content: center;
-  background-color: #BED8D4;
+  background-color: #E2E2F3;
 }
 
 #nav {
@@ -27,7 +27,7 @@
 }
 
 #SectionOpal {
-  background-color: #BED8D4;
+  background-color: #E2E2F3;
   height: 100vh;
 }
 
